# hpc-timetabling

./: Cargo.toml  README.md  TODO.md  sol.xml  todo.txt
cpu/: Cargo.toml
cpu-naive/: Cargo.toml
cpu-naive/src/: adjuster.rs  assigner.rs  crossover.rs  distribution.rs  elitism.rs  evaluator.rs  fitness.rs  local_search.rs  main.rs  model.rs  mutation.rs  output.rs  penalty.rs  selection.rs  solution.rs  solver.rs  stats.rs  utils.rs
cpu/executor/: Cargo.toml
cpu/executor/src/: adjuster.rs  evaluator.rs  output.rs  solution.rs  solver.rs
cpu/parser/: Cargo.toml
cpu/parser/src/: courses.rs  days.rs  distributions.rs  indexable.rs  optimization.rs  problem.rs  rooms.rs  students.rs  timeslots.rs
cpu/serializer/: Cargo.toml
cpu/serializer/src/: output.rs  utils.rs
data/experiments/: parent_lower_theorem.py  parent_same_config_theorem.py
data/test-data/: distribution-test-2.xml  distribution-test.xml  students-test.xml
data_parser/: Cargo.toml
eden/: run.sh
gpu/: .gitignore  CMakeLists.txt  run_tests.sh
gpu/include/: common.cuh  gui.cuh  typedefs.h
gpu/include/executor/: adjuster.cuh  cmd_args.h  cmd_args.hpp  model.hpp  penalty.hpp  solution.hpp  solver.cuh  solver.hpp  student_assignment.hpp  timer.cuh
gpu/include/kernels/: assigner.cuh  common.cuh  crossover.cuh  distribution.cuh  elitism.cuh  evaluator.cuh  local_search.cuh  model.cuh  mutation.cuh  penalty.cuh  population.cuh  selection.cuh  solution.cuh  utils.cuh
gpu/include/parser/: courses.h  courses.hpp  days.h  days.hpp  distributions.h  distributions.hpp  id_types.h  id_types.hpp  optimization.h  optimization.hpp  parse_error.h  parser.h  parser.hpp  problem.h  problem.hpp  rooms.h  rooms.hpp  students.h  students.hpp  timeslots.h  timeslots.hpp  utils.h  utils.hpp  weeks.h  weeks.hpp
gpu/include/serializer/: output.h  output.hpp  serializer.h  serializer.hpp  utils.h  utils.hpp
gpu/src/: gui.cu  main.cu
gpu/src/executor/: adjuster.cu  cmd_args.cpp  model.cpp  penalty.cpp  solver.cpp  solver.cu  timer.cu
gpu/src/kernels/: assigner.cu  crossover.cu  distribution.cu  elitism.cu  evaluator.cu  local_search.cu  model.cu  mutation.cu  penalty.cu  population.cu  selection.cu
gpu/src/parser/: courses.cpp  days.cpp  distributions.cpp  optimization.cpp  problem.cpp  rooms.cpp  students.cpp  timeslots.cpp  utils.cpp  weeks.cpp
gpu/src/serializer/: output.cpp  utils.cpp
gpu/tests/executor/: test_model.cpp
gpu/tests/parser/: test_courses.cpp  test_days.cpp  test_distributions.cpp  test_optimization.cpp  test_problem.cpp  test_rooms.cpp  test_students.cpp  test_timeslots.cpp  test_weeks.cpp
gpu/tests/serializer/: test_serializer.cpp
parser/: Cargo.toml
parser/src/: courses.rs  days.rs  distributions.rs  error.rs  lib.rs  optimization.rs  problem.rs  rooms.rs  students.rs  timeslots.rs  utils.rs  weeks.rs
serializer/src/: dtos.rs  lib.rs  utils.rs
visualization/: metrics.csv  visualizer.py
