[workspace]
members = ["parser", "executor", "serializer"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
quick-xml = { version = "0.39.2", features = ["serialize"] }
thiserror = "2.0.18"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version="4.6.0", features = ["derive"] }
rayon = "1.11.0"

parser = { path = "parser" }
serializer = { path = "serializer" }

[profile.release]
debug = true
debug-assertions = false
lto = false
codegen-units = 1
